force-app/main/default/objects/finchClubLegacyUsers__c/finchClubLegacyUsers__c.object-meta.xml
<CustomObject>
    <label>finchClubLegacyUser</label>
    <nameField>
        <label>finchClubLegacyUser</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>finchClubLegacyUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>