force-app/main/default/objects/finchClubLegacyUsers__c/fields/CertificateFilePath__c.field-meta.xml
<CustomField>
    <fullName>CertificateFilePath__c</fullName>
    <label>CertificateFilePath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>