force-app/main/default/objects/finchClubLegacyUsers__c/fields/CompanyBranchID__c.field-meta.xml
<CustomField>
    <fullName>CompanyBranchID__c</fullName>
    <label>CompanyBranchID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>