force-app/main/default/objects/finchClubLegacyUsers__c/fields/CompanyID__c.field-meta.xml
<CustomField>
    <fullName>CompanyID__c</fullName>
    <label>CompanyID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>