force-app/main/default/objects/finchClubLegacyUsers__c/fields/CompanyWebSite__c.field-meta.xml
<CustomField>
    <fullName>CompanyWebSite__c</fullName>
    <label>CompanyWebSite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>