force-app/main/default/objects/finchClubLegacyUsers__c/fields/ConnectionReceivedId__c.field-meta.xml
<CustomField>
    <fullName>ConnectionReceivedId__c</fullName>
    <label>ConnectionReceivedId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>