force-app/main/default/objects/finchClubLegacyUsers__c/fields/ConnectionSentId__c.field-meta.xml
<CustomField>
    <fullName>ConnectionSentId__c</fullName>
    <label>ConnectionSentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>