force-app/main/default/objects/finchClubLegacyUsers__c/fields/contactId__c.field-meta.xml
<CustomField>
    <fullName>contactId__c</fullName>
    <label>contactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>