force-app/main/default/objects/finchClubLegacyUsers__c/fields/CreateTime__c.field-meta.xml
<CustomField>
    <fullName>CreateTime__c</fullName>
    <label>CreateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>