force-app/main/default/objects/finchClubLegacyUsers__c/fields/CustomerLevel__c.field-meta.xml
<CustomField>
    <fullName>CustomerLevel__c</fullName>
    <label>CustomerLevel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>