force-app/main/default/objects/finchClubLegacyUsers__c/fields/DepartmentOther__c.field-meta.xml
<CustomField>
    <fullName>DepartmentOther__c</fullName>
    <label>DepartmentOther</label>
    <length>255</length>
    <type>Text</type>
</CustomField>