force-app/main/default/objects/finchClubLegacyUsers__c/fields/FormW9Path__c.field-meta.xml
<CustomField>
    <fullName>FormW9Path__c</fullName>
    <label>FormW9Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>