force-app/main/default/objects/finchClubLegacyUsers__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <label>IsDeleted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>