force-app/main/default/objects/finchClubLegacyUsers__c/fields/IsInternal__c.field-meta.xml
<CustomField>
    <fullName>IsInternal__c</fullName>
    <label>IsInternal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>