force-app/main/default/objects/finchClubLegacyUsers__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>JobTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>