force-app/main/default/objects/finchClubLegacyUsers__c/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <label>LastActivityDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>