force-app/main/default/objects/finchClubLegacyUsers__c/fields/leadId__c.field-meta.xml
<CustomField>
    <fullName>leadId__c</fullName>
    <label>leadId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>