force-app/main/default/objects/finchClubLegacyUsers__c/fields/mailingStreet__c.field-meta.xml
<CustomField>
    <fullName>mailingStreet__c</fullName>
    <label>mailingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>