force-app/main/default/objects/finchClubLegacyUsers__c/fields/noAddress__c.field-meta.xml
<CustomField>
    <fullName>noAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>noAddress</label>
    <type>Checkbox</type>
</CustomField>