force-app/main/default/objects/finchClubLegacyUsers__c/fields/Numbersofcompanylocations__c.field-meta.xml
<CustomField>
    <fullName>Numbersofcompanylocations__c</fullName>
    <label>Numbersofcompanylocations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>