force-app/main/default/objects/finchClubLegacyUsers__c/fields/NumbersofEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumbersofEmployees__c</fullName>
    <label>NumbersofEmployees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>