force-app/main/default/objects/finchClubLegacyUsers__c/fields/OfficeFax__c.field-meta.xml
<CustomField>
    <fullName>OfficeFax__c</fullName>
    <label>OfficeFax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>