force-app/main/default/objects/finchClubLegacyUsers__c/fields/OfficePhone__c.field-meta.xml
<CustomField>
    <fullName>OfficePhone__c</fullName>
    <label>OfficePhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>