force-app/main/default/objects/finchClubLegacyUsers__c/fields/oracleID__c.field-meta.xml
<CustomField>
    <fullName>oracleID__c</fullName>
    <label>oracleID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>