force-app/main/default/objects/finchClubLegacyUsers__c/fields/PardotId__c.field-meta.xml
<CustomField>
    <fullName>PardotId__c</fullName>
    <label>PardotId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>