force-app/main/default/objects/finchClubLegacyUsers__c/fields/PayPal_CustomerID__c.field-meta.xml
<CustomField>
    <fullName>PayPal_CustomerID__c</fullName>
    <label>PayPal_CustomerID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>