force-app/main/default/objects/finchClubLegacyUsers__c/fields/PayPal_Email__c.field-meta.xml
<CustomField>
    <fullName>PayPal_Email__c</fullName>
    <label>PayPal_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>