force-app/main/default/objects/finchClubLegacyUsers__c/fields/PayPal_FirstName__c.field-meta.xml
<CustomField>
    <fullName>PayPal_FirstName__c</fullName>
    <label>PayPal_FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>