force-app/main/default/objects/finchClubLegacyUsers__c/fields/PayPal_Phone__c.field-meta.xml
<CustomField>
    <fullName>PayPal_Phone__c</fullName>
    <label>PayPal_Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>