force-app/main/default/objects/finchClubLegacyUsers__c/fields/PermitDate__c.field-meta.xml
<CustomField>
    <fullName>PermitDate__c</fullName>
    <label>PermitDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>