force-app/main/default/objects/finchClubLegacyUsers__c/fields/PermitLicenseImage__c.field-meta.xml
<CustomField>
    <fullName>PermitLicenseImage__c</fullName>
    <label>PermitLicenseImage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>