force-app/main/default/objects/finchClubLegacyUsers__c/fields/PermitLicenseNo__c.field-meta.xml
<CustomField>
    <fullName>PermitLicenseNo__c</fullName>
    <label>PermitLicenseNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>