force-app/main/default/objects/finchClubLegacyUsers__c/fields/PrimaryIndustryOther__c.field-meta.xml
<CustomField>
    <fullName>PrimaryIndustryOther__c</fullName>
    <label>PrimaryIndustryOther</label>
    <length>255</length>
    <type>Text</type>
</CustomField>