force-app/main/default/objects/finchClubLegacyUsers__c/fields/ProductFocusOther__c.field-meta.xml
<CustomField>
    <fullName>ProductFocusOther__c</fullName>
    <label>ProductFocusOther</label>
    <length>255</length>
    <type>Text</type>
</CustomField>