force-app/main/default/objects/finchClubLegacyUsers__c/fields/RegistrationReferral__c.field-meta.xml
<CustomField>
    <fullName>RegistrationReferral__c</fullName>
    <label>RegistrationReferral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>