force-app/main/default/objects/finchClubLegacyUsers__c/fields/RegistrationReferralOther__c.field-meta.xml
<CustomField>
    <fullName>RegistrationReferralOther__c</fullName>
    <label>RegistrationReferralOther</label>
    <length>255</length>
    <type>Text</type>
</CustomField>