force-app/main/default/objects/finchClubLegacyUsers__c/fields/RetailStoreNumber__c.field-meta.xml
<CustomField>
    <fullName>RetailStoreNumber__c</fullName>
    <label>RetailStoreNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>