force-app/main/default/objects/finchClubLegacyUsers__c/fields/SpiffRole__c.field-meta.xml
<CustomField>
    <fullName>SpiffRole__c</fullName>
    <label>SpiffRole</label>
    <length>255</length>
    <type>Text</type>
</CustomField>