force-app/main/default/objects/finchClubLegacyUsers__c/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <label>UpdateDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>