force-app/main/default/objects/finchClubLegacyUsers__c/fields/UserClaimType__c.field-meta.xml
<CustomField>
    <fullName>UserClaimType__c</fullName>
    <label>UserClaimType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>