force-app/main/default/objects/finchClubLegacyUsers__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <externalId>true</externalId>
    <label>UserID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>