force-app/main/default/objects/finchClubLegacyUsers__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>UserType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>