force-app/main/default/objects/finchClubLegacyUsers__c/fields/WorkAddress__c.field-meta.xml
<CustomField>
    <fullName>WorkAddress__c</fullName>
    <label>WorkAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>